--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="widjaja.png">
 	<title>A place of emptiness.</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <p>Lol how did you get here?</p>
