--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>A place of emptiness.</title>
+	<title>widjaja</title>
 	<link rel="icon" href="widjaja.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
