--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 	<meta charset="UTF-8">
 	<title>widjaja</title>
 	<link rel="icon" href="widjaja.png">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
+		body {background-color: #6F6279}
+		.headbar{font-family: roboto; font-weight: 700}
+		.titles{font-family: roboto; font-weight: 400}
+		.text{font-family: roboto; font-weight: 300}
+	</style>
 </head>
 <body>
-<p>Lol how did you get here?</p>
+<div class='headbar'>Lol how did you get here?</div>
 </body>
 </html>
