--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<title>widjaja</title>
 	<link rel="icon" href="widjaja.png">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="stylesheet.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 		body {background-color: #6F6279}
 		.headbar{font-family: roboto; font-weight: 700}
-		.titles{font-family: roboto; font-weight: 400}
-		.text{font-family: roboto; font-weight: 300}
+		.titles{font-family: roboto-light; font-weight: 400}
+		.text{font-family: roboto-thin; font-weight: 300}
 	</style>
 </head>
 <body>
