--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 	<link rel="stylesheet" href="stylesheet.css">
 	<style>
 		body {background-color: #6F6279}
-		.headbar{font-family: roboto; font-weight: 700}
-		.titles{font-family: roboto-light; font-weight: 400}
-		.text{font-family: roboto-thin; font-weight: 300}
+		.headbar{font-family: roboto; font-weight: 800}
+		.title{font-family: roboto-light; font-weight: 600}
+		.text{font-family: roboto-thin}
 	</style>
 	<link rel="icon" href="widjaja.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div class='headbar'>Lol how did you get here?</div>
+<div class='title'>It seems that this website is going through some construction.</div>
+<div class='title'>Maybe come back at a later date. ;)</div>
 </body>
 </html>
