--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 		body {background-color: #6F6279}
 		.headbar{font-family: roboto; font-weight: 800}
 		.title{font-family: roboto-light; font-weight: 600}
-		.text{font-family: roboto-thin}
+		.text{font-family: roboto-thin; font-weight: 700}
 	</style>
 	<link rel="icon" href="widjaja.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<div class='headbar'>Lol how did you get here?</div>
-<div class='title'>It seems that this website is going through some construction.</div>
-<div class='title'>Maybe come back at a later date. ;)</div>
+<div class='headbar'>How did you get here?</div>
+<div class='title'><br>No matter.
+	<br>It seems that this website is going through some...
+	<br>construction.</div>
+<div class='text'><br>Maybe come back at a later time. ;)</div>
 </body>
 </html>
