--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<div class='headbar'>How did you get here?</div>
+<div class='headbar'>
+	<div>
+		<img src="widjaja.png" style="width: 100px;height: 100px">
+	</div>
+	How did you get here?
+</div>
 <div class='title'><br>No matter.
 	<br>It seems that this website is going through some...
 	<br>construction.</div>
