--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 <body>
 <div class='headbar'>
 	<div>
-		<img src="widjaja.png" style="width: 100px;height: 100px">
+		How did you get here?
 	</div>
-	How did you get here?
 </div>
 <div class='title'><br>No matter.
-	<br>It seems that this website is going through some...
+	<br>It seems that this place is going through some...
 	<br>construction.</div>
 <div class='text'><br>Maybe come back at a later time. ;)</div>
 </body>
