--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>widjaja</title>
 	<link rel="stylesheet" href="stylesheet.css">
-	<link rel="icon" href="widjaja.png">
+	<link rel="icon" href="icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
