--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>widjaja</title>
 	<link rel="stylesheet" href="stylesheet.css">
+	<style>
+	</style>
 	<link rel="icon" href="icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -17,5 +19,6 @@
 	<br>It seems that this place is going through some...
 	<br>construction.</div>
 <div class='text'><br>Maybe come back at a later time. ;)</div>
+<!--<div class="title copyright">Copyright &#169; 2020 Widjaja</div> -->
 </body>
 </html>
