--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<div class='headbar'>
+<div class='normalfont'>
 	<div>
 		How did you get here?
 	</div>
 </div>
-<div class='title'><br>No matter.
+<div class='lightfont'><br>No matter.
 	<br>It seems that this place is going through some...
 	<br>construction.</div>
-<div class='text'><br>Maybe come back at a later time. ;)</div>
+<div class='thinfont'><br>Maybe come back at a later time. ;)</div>
 <!--<div class="title copyright">Copyright &#169; 2020 Widjaja</div> -->
 </body>
 </html>
