--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,19 +2,19 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Widjaja's Home Page</title>
-	<link rel="stylesheet" href="stylesheet.css">
+	<title>Widjaja's Contacts</title>
+	<link rel="stylesheet" href="../stylesheet.css">
 	<style>
 	</style>
-	<link rel="icon" href="icon.png">
+	<link rel="icon" href="../icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div>
 	<ul>
-		<li><a class="normalfont currentpage" href="index.html">Home</a></li>
-		<li><a class="normalfont" href="./pages/boren.html">Boren</a></li>
-		<li><a class="normalfont" href="./pages/contact.html">Contact</a></li>
+		<li><a class="normalfont" href="../index.html">Home</a></li>
+		<li><a class="normalfont" href="boren.html">Boren</a></li>
+		<li><a class="normalfont currentpage" href="contact.html">Contact</a></li>
 	</ul>
 </div>
 <div class="normalfont">
