--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div>
 	<ul>
 		<li><a class="normalfont currentpage" href="index.html">Home</a></li>
-		<li><a class="normalfont" href="./pages/boren.html">Boren</a></li>
+		<li><a class="normalfont" href="./pages/aphug.html">AP HUG</a></li>
 		<li><a class="normalfont" href="./pages/contact.html">Contact</a></li>
 	</ul>
 </div>
