--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,7 +13,7 @@
 <div>
 	<ul>
 		<li><a class="normalfont" href="../index.html">Home</a></li>
-		<li><a class="normalfont" href="boren.html">Boren</a></li>
+		<li><a class="normalfont" href="aphug.html">AP HUG</a></li>
 		<li><a class="normalfont currentpage" href="contact.html">Contact</a></li>
 	</ul>
 </div>
