--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Widjaja's Home Page</title>
+	<title>Widjaja</title>
 	<link rel="stylesheet" href="stylesheet.css">
 	<style>
 	</style>
