--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Widjaja's Contacts</title>
+	<title>Contact Me</title>
 	<link rel="stylesheet" href="../stylesheet.css">
 	<style>
 	</style>
