--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div>
 	<ul>
-		<li><a class="normalfont currentpage" href="index.html">Home</a></li>
+		<li><a class="normalfont currentpage">Home</a></li>
 		<li><a class="normalfont" href="./pages/aphug.html">AP HUG</a></li>
 		<li><a class="normalfont" href="./pages/contact.html">Contact</a></li>
 	</ul>
