--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,7 +14,7 @@
 	<ul>
 		<li><a class="normalfont" href="../index.html">Home</a></li>
 		<li><a class="normalfont" href="aphug.html">AP HUG</a></li>
-		<li><a class="normalfont currentpage" href="contact.html">Contact</a></li>
+		<li><a class="normalfont currentpage">Contact</a></li>
 	</ul>
 </div>
 <div class="normalfont">
