--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Scary Place.</title>
+	<title>Scary Place</title>
 	<link rel="stylesheet" href="../stylesheet.css">
 	<style>
 	</style>
@@ -26,5 +26,6 @@
 	<br>It seems that this place is going through some...
 	<br>construction.</div>
 <div class="thinfont"><br>Maybe come back at a later time. ;)</div>
+<div style="position: relative; top: 100px" class="thinfont"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
 </body>
 </html>
