--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -17,15 +17,27 @@
 		<li><a class="normalfont" href="contact.html">Contact</a></li>
 	</ul>
 </div>
-<div class="normalfont">
-	<div>
-		<br>How did you get here?
-	</div>
+<div class="lightfont">
+	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/R2F5Vrw8f40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<ol>
+		<caption>Timestamps</caption>
+		<li></li>
+	</ol>
 </div>
-<div class="lightfont"><br>No matter.
-	<br>It seems that this place is going through some...
-	<br>construction.</div>
-<div class="thinfont"><br>Maybe come back at a later time. ;)</div>
-<div style="position: relative; top: 100px" class="thinfont"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
+<div class="lightfont">
+	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/xqvEGtWGBzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<ol>
+		<caption>Timestamps</caption>
+		<li></li>
+	</ol>
+</div>
+<div class="lightfont">
+	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/BZ95VRbkSt0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<ol>
+		<caption>Timestamps</caption>
+		<li></li>
+	</ol>
+</div>
+<div style="position: relative; top: 10px; background-color: #000000; display: inline" class="thinfont"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
 </body>
 </html>
