--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -38,6 +38,6 @@
 		<li></li>
 	</ol>
 </div>
-<div style="position: relative; top: 10px; background-color: #000000; display: inline" class="thinfont"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
+<div style="position: relative; top: 10px; display: inline" class="thinfont"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
 </body>
 </html>
