--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -18,7 +18,7 @@
 	</ul>
 </div>
 <div class="thinfont">
-	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/R2F5Vrw8f40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/R2F5Vrw8f40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
 	<ol>
 		<caption>Timestamps</caption>
 		<li>Introduction: 0:00 - 1:48 [mainly useless information]</li>
