--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -33,14 +33,14 @@
 	</ol>
 </div>
 <div class="thinfont">
-	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/xqvEGtWGBzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/xqvEGtWGBzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
 	<ol>
 		<caption>Timestamps</caption>
 		<li>introduction - </li>
 	</ol>
 </div>
 <div class="thinfont">
-	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/BZ95VRbkSt0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/BZ95VRbkSt0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
 	<ol>
 		<caption>Timestamps</caption>
 		<li>introduction - </li>
