--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -18,7 +18,7 @@
 	</ul>
 </div>
 <div class="thinfont">
-	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/R2F5Vrw8f40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/R2F5Vrw8f40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
 		<caption>Timestamps</caption>
 		<li>Introduction: 0:00 - 1:48 [mainly useless information]</li>
@@ -33,17 +33,17 @@
 	</ol>
 </div>
 <div class="thinfont">
-	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/xqvEGtWGBzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/xqvEGtWGBzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
 		<caption>Timestamps</caption>
-		<li>introduction - </li>
+		<li>Introduction - </li>
 	</ol>
 </div>
 <div class="thinfont">
-	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/BZ95VRbkSt0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/BZ95VRbkSt0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
 		<caption>Timestamps</caption>
-		<li>introduction - </li>
+		<li>Introduction - </li>
 	</ol>
 </div>
 <div style="position: relative; top: 10px; display: inline" class="thinfont"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
