--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,6 +25,6 @@
 <div class="lightfont"><br>No matter.
 	<br>It seems that this place is going through some...
 	<br>construction.</div>
-<div class="thinfont"><br>Maybe come back at a later time. ;)</div>
+<div class="thinfont"><br>Maybe there's things in other places? :)</div>
 </body>
 </html>
