--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,12 +19,13 @@
 </div>
 <div class="normalfont">
 	<div>
-		<br>How did you get here?
+		<br>Hello?
 	</div>
 </div>
-<div class="lightfont"><br>No matter.
-	<br>It seems that this place is going through some...
-	<br>construction.</div>
+<div class="lightfont"><br>Is anyone there?
+	<br>...
+	<br>This place is really...
+	<br>empty. Isn't it?</div>
 <div class="thinfont"><br>Maybe there's things in other places? :)</div>
 </body>
 </html>
