--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -17,33 +17,38 @@
 		<li><a class="normalfont" href="contact.html">Contact</a></li>
 	</ul>
 </div>
+<div class="lightfont">(The titles to the notes are the titles to the videos)</div>
 <div class="thinfont">
 	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/R2F5Vrw8f40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
-		<caption>Timestamps</caption>
+		<caption>Timestamps to 6.1 The Origin and Influence of Urbanization</caption>
 		<li>Introduction: 0:00 - 1:48 [mainly useless information]</li>
-		<li>Unit & Topic: 1:49 - 1:59 [this would be the title to the notes]</li>
+		<li>Unit & Topic: 1:49 - 1:59 [more useless bs]</li>
 		<li>Warmup: 2:00 - 4:45 [not really "note-worthy"]</li>
-		<li>Lesson 1 Overview: 4:46 - 9:45 [Lesson 1]</li>
-		<li>Lesson 2 Overview: 9:46 - 24:22 [Lesson 2]</li>
+		<li>Lesson 1: 4:46 - 9:45 [TAKE NOTES ON THIS]</li>
+		<li>Lesson 2: 9:46 - 24:22 [TAKE NOTES ON THIS]</li>
 		<li>Video: 24:23 - 27:12 <a href="https://youtu.be/L5v9jt4__ho" target="_blank">(Watch it here)</a></li>
 		<li>Discussion of Video: 27:13 - 28:28</li>
-		<li>Other aspect to why cities grow rapidly: 28:29 - 30:36</li>
-		<li>The rest of the stuff after this is pretty useless but you can keep watching.</li>
+		<li>Other aspect to why cities grow rapidly: 28:29 - 30:36 [juicy info]</li>
+		<li>Random BS: 30:37 - end of the video [don't watch this part]</li>
 	</ol>
 </div>
 <div class="thinfont">
 	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/xqvEGtWGBzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
-		<caption>Timestamps</caption>
-		<li>Introduction - </li>
+		<caption>Timestamps to 6.2 Cities Across the World</caption>
+		<li>Introduction: 0:00 - 0:40 [skip this part its useless]</li>
+		<li>Unit & Topic: 0:41 - 0:56 [this would be the title to the notes]</li>
+		<li>SHE TALKS ABOUT HERSELF WHY: 0:57 - 1:25 [absolutely no point in watching this part]</li>
+		<li>Warmup: 1:26 - 5:35 [not really "note-worthy" but worth a watch at 2x speed otherwise it's too slow lol]</li>
+		<li>Lesson 1: 5:36 -  [TAKE NOTES ON THIS]</li>
 	</ol>
 </div>
 <div class="thinfont">
 	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/BZ95VRbkSt0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
-		<caption>Timestamps</caption>
-		<li>Introduction - </li>
+		<caption>Timestamps to 6.3 Cities and Globalization</caption>
+		<li>Introduction: </li>
 	</ol>
 </div>
 <div style="position: relative; top: 10px; display: inline" class="thinfont"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
