--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -39,9 +39,9 @@
 		<caption>Timestamps to 6.2 Cities Across the World</caption>
 		<li>Introduction: 0:00 - 0:40 [skip this part its useless]</li>
 		<li>Unit & Topic: 0:41 - 0:56 [this would be the title to the notes]</li>
-		<li>SHE TALKS ABOUT HERSELF WHY: 0:57 - 1:25 [absolutely no point in watching this part]</li>
+		<li>SHE TALKS ABOUT HERSELF WHY: 0:57 - 9:13 [absolutely no point in watching this part]</li>
 		<li>Warmup: 1:26 - 5:35 [not really "note-worthy" but worth a watch at 2x speed otherwise it's too slow lol]</li>
-		<li>Lesson 1: 5:36 -  [TAKE NOTES ON THIS]</li>
+		<li>Lesson 1: 9:14 -  []</li>
 	</ol>
 </div>
 <div class="thinfont">
