--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -22,12 +22,9 @@
 	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/R2F5Vrw8f40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
 		<caption>Timestamps to 6.1 The Origin and Influence of Urbanization</caption>
-		<li>Introduction: 0:00 - 1:48 [mainly useless information]</li>
-		<li>Unit & Topic: 1:49 - 1:59 [more useless bs]</li>
-		<li>Warmup: 2:00 - 4:45 [not really "note-worthy"]</li>
 		<li>Lesson 1: 4:46 - 9:45 [TAKE NOTES ON THIS]</li>
 		<li>Lesson 2: 9:46 - 24:22 [TAKE NOTES ON THIS]</li>
-		<li>Video: 24:23 - 27:12 <a href="https://youtu.be/L5v9jt4__ho" target="_blank">(Watch it here)</a></li>
+		<li>Video in the Video: 24:23 - 27:12 <a href="https://youtu.be/L5v9jt4__ho" target="_blank">(Watch it here)</a></li>
 		<li>Discussion of Video: 27:13 - 28:28</li>
 		<li>Other aspect to why cities grow rapidly: 28:29 - 30:36 [juicy info]</li>
 		<li>Random BS: 30:37 - end of the video [don't watch this part]</li>
@@ -37,11 +34,10 @@
 	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/xqvEGtWGBzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
 		<caption>Timestamps to 6.2 Cities Across the World</caption>
-		<li>Introduction: 0:00 - 0:40 [skip this part its useless]</li>
-		<li>Unit & Topic: 0:41 - 0:56 [this would be the title to the notes]</li>
-		<li>SHE TALKS ABOUT HERSELF WHY: 0:57 - 9:13 [absolutely no point in watching this part]</li>
 		<li>Warmup: 1:26 - 5:35 [not really "note-worthy" but worth a watch at 2x speed otherwise it's too slow lol]</li>
-		<li>Lesson 1: 9:14 -  []</li>
+		<li>Lesson 1: 9:14 - 36:55 [This is basically the notes]</li>
+		<li>Debrief and Summary: 36:56 - 38:41</li>
+		<li>Everything else is useless.</li>
 	</ol>
 </div>
 <div class="thinfont">
