--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -22,6 +22,7 @@
 	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/R2F5Vrw8f40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
 		<caption>Timestamps to 6.1 The Origin and Influence of Urbanization</caption>
+		<li>Warmup: 2:49 - 4:45 [not really "note-worthy" but worth a watch at 2x speed otherwise it's too slow lol]</li>
 		<li>Lesson 1: 4:46 - 9:45 [TAKE NOTES ON THIS]</li>
 		<li>Lesson 2: 9:46 - 24:22 [TAKE NOTES ON THIS]</li>
 		<li>Video in the Video: 24:23 - 27:12 <a href="https://youtu.be/L5v9jt4__ho" target="_blank">(Watch it here)</a></li>
@@ -44,7 +45,7 @@
 	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/BZ95VRbkSt0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
 		<caption>Timestamps to 6.3 Cities and Globalization</caption>
-		<li>Introduction: </li>
+		<li></li>
 	</ol>
 </div>
 <div style="position: relative; top: 10px; display: inline" class="thinfont"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
