--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -28,7 +28,7 @@
 		<li>Video in the Video: 24:23 - 27:12 <a href="https://youtu.be/L5v9jt4__ho" target="_blank">(Watch it here)</a></li>
 		<li>Discussion of Video: 27:13 - 28:28</li>
 		<li>Other aspect to why cities grow rapidly: 28:29 - 30:36 [juicy info]</li>
-		<li>Random BS: 30:37 - end of the video [don't watch this part]</li>
+		<li>Random stuff: 30:37 - end of the video [don't watch this part]</li>
 	</ol>
 </div>
 <div class="thinfont">
