--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -22,7 +22,7 @@
 	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/R2F5Vrw8f40" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
 		<caption>Timestamps to 6.1 The Origin and Influence of Urbanization</caption>
-		<li>Warmup: 2:49 - 4:45 [not really "note-worthy" but worth a watch at 2x speed otherwise it's too slow lol]</li>
+		<li>Warmup: 2:49 - 4:45 [not really "note-worthy" but worth a watch at 2x speed otherwise it's too slow]</li>
 		<li>Lesson 1: 4:46 - 9:45 [TAKE NOTES ON THIS]</li>
 		<li>Lesson 2: 9:46 - 24:22 [TAKE NOTES ON THIS]</li>
 		<li>Video in the Video: 24:23 - 27:12 <a href="https://youtu.be/L5v9jt4__ho" target="_blank">(Watch it here)</a></li>
@@ -35,8 +35,8 @@
 	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/xqvEGtWGBzg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
 		<caption>Timestamps to 6.2 Cities Across the World</caption>
-		<li>Warmup: 1:26 - 5:35 [not really "note-worthy" but worth a watch at 2x speed otherwise it's too slow lol]</li>
-		<li>Lesson 1: 9:14 - 36:55 [This is basically the notes]</li>
+		<li>Warmup: 1:26 - 5:35 [not really "note-worthy" but worth a watch at 2x speed otherwise it's too slow]</li>
+		<li>Lesson 1: 9:14 - 36:55 [This is basically THE NOTES]</li>
 		<li>Debrief and Summary: 36:56 - 38:41</li>
 		<li>Everything else is useless.</li>
 	</ol>
@@ -45,7 +45,10 @@
 	<iframe max-width="560" height="315" src="https://www.youtube-nocookie.com/embed/BZ95VRbkSt0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<ol>
 		<caption>Timestamps to 6.3 Cities and Globalization</caption>
-		<li></li>
+		<li>Warmup: 1:43 - 6:30 [not really "note-worthy" but worth a watch at 2x speed otherwise it's too slow]</li>
+		<li>Lesson 1: 6:31 - 40:50 [This is basically THE NOTES]</li>
+		<li>AP Questions to Practice: 41:58 - end of the video [watch at 2x speed otherwise it's too slow]</li>
+		<li>The rest is pretty much useless.</li>
 	</ol>
 </div>
 <div style="position: relative; top: 10px; display: inline" class="thinfont"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
