--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -2,6 +2,10 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
+	<meta name="title" content="William Widjaja - widjaja">
+	<meta name="description" content="Hello! My name is William Widjaja and I am a developer and a CTF player who loves to make and break things.">
+  	<meta name="keywords" content="widjaja,wida_ja,widaja,boren, ap hug, ap human geography, william, widjaja0, programmer">
+  	<meta name="author" content="William Widjaja">
 	<title>Scary Place</title>
 	<link rel="stylesheet" href="../stylesheet.css">
 	<style>
