--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="title" content="William Widjaja - widjaja">
-	<meta name="description" content="Hello! My name is William Widjaja and I am a developer and a CTF player who loves to make and break things.">
+	<meta name="description" content="AP Human Geography is a desolate land where no human should ever step in.">
   	<meta name="keywords" content="widjaja,wida_ja,widaja,boren, ap hug, ap human geography, william, widjaja0, programmer">
   	<meta name="author" content="William Widjaja">
 	<title>Scary Place</title>
