--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
+	<title>scary place</title>
 	<meta name="title" content="William Widjaja - widjaja">
 	<meta name="description" content="AP Human Geography is a desolate land where no human should ever step in.">
   	<meta name="keywords" content="widjaja,wida_ja,widaja,boren, ap hug, ap human geography, william, widjaja0, programmer">
   	<meta name="author" content="William Widjaja">
-	<title>Scary Place</title>
 	<link rel="stylesheet" href="../stylesheet.css">
 	<style>
 	</style>
