--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
+	<title>contact me</title>
 	<meta name="title" content="William Widjaja - widjaja">
 	<meta name="description" content="The contact page for William Widjaja, also known as widjaja.">
   	<meta name="keywords" content="widjaja,wida_ja,widaja,boren, ap hug, ap human geography, william, widjaja0, programmer">
   	<meta name="author" content="William Widjaja">
-	<title>Contact Me</title>
 	<link rel="stylesheet" href="../stylesheet.css">
 	<style>
 	</style>
