--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
 	<li><a class="normalfont" href="./pages/contact.html">Contact</a></li>
 </ul>
 <div class="normalfont">
-	<div>
-		<br>How did you get here?
-	</div>
+	<br>It's empty....
 </div>
-<div class="lightfont"><br>No matter.
-	<br>It seems that this place is going through some...
-	<br>construction.</div>
-<div class="thinfont"><br>Maybe there's things in other places? :)</div>
 </body>
 </html>
