--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,14 +20,7 @@
 	<li><a class="normalfont currentpage">Contact</a></li>
 </ul>
 <div class="normalfont">
-	<div>
-		<br>Hello?
-	</div>
+	<br>It's empty....
 </div>
-<div class="lightfont"><br>Is anyone there?
-	<br>...
-	<br>This place is really...
-	<br>empty. Isn't it?</div>
-<div class="thinfont"><br>Maybe there's things in other places? :)</div>
 </body>
 </html>
