--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 <body>
 <ul>
-	<li><a class="normalfont currentpage">Home</a></li>
-	<li><a class="normalfont" href="./pages/aphug.html">AP HUG</a></li>
-	<li><a class="normalfont" href="./pages/contact.html">Contact</a></li>
+	<li><a class="lightfont mediumf currentpage">Home</a></li>
+	<li><a class="lightfont mediumf" href="./pages/aphug.html">AP HUG</a></li>
+	<li><a class="lightfont mediumf" href="./pages/contact.html">Contact</a></li>
 </ul>
-<div class="normalfont">
-	<br>It's empty....
+<div class="thinfont bigf">
+	<br>It's empty.... &#128563;
 </div>
 </body>
 </html>
