--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,12 +15,12 @@
 </head>
 <body>
 <ul>
-	<li><a class="normalfont" href="../index.html">Home</a></li>
-	<li><a class="normalfont" href="aphug.html">AP HUG</a></li>
-	<li><a class="normalfont currentpage">Contact</a></li>
+	<li><a class="lightfont mediumf" href="../index.html">Home</a></li>
+	<li><a class="lightfont mediumf" href="aphug.html">AP HUG</a></li>
+	<li><a class="lightfont mediumf currentpage">Contact</a></li>
 </ul>
-<div class="normalfont">
-	<br>It's empty....
+<div class="thinfont bigf">
+	<br>It's empty.... &#128563;
 </div>
 </body>
 </html>
