--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 <body>
 <ul>
-	<li><a class="lightfont smallf currentpage">Home</a></li>
-	<li><a class="lightfont smallf" href="./pages/aphug.html">AP HUG</a></li>
-	<li><a class="lightfont smallf" href="./pages/contact.html">Contact</a></li>
+	<li><a class="lightfont mediumf currentpage">Home</a></li>
+	<li><a class="lightfont mediumf" href="./pages/aphug.html">AP HUG</a></li>
+	<li><a class="lightfont mediumf" href="./pages/contact.html">Contact</a></li>
 </ul>
-<div class="thinfont bigf">
+<div class="thinfont biggerf">
 	<br>It's empty.... &#128563;
 </div>
 </body>
