--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -15,9 +15,9 @@
 </head>
 <body>
 <ul>
-	<li><a class="lightfont smallf" href="../index.html">Home</a></li>
-	<li><a class="lightfont smallf currentpage">AP HUG</a></li>
-	<li><a class="lightfont smallf" href="contact.html">Contact</a></li>
+	<li><a class="lightfont mediumf" href="../index.html">Home</a></li>
+	<li><a class="lightfont mediumf currentpage">AP HUG</a></li>
+	<li><a class="lightfont mediumf" href="contact.html">Contact</a></li>
 </ul>
 <div class="thinfont bigf">
 	<br>It's empty.... &#128563;
