--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -19,7 +19,7 @@
 	<li><a class="lightfont mediumf currentpage">AP HUG</a></li>
 	<li><a class="lightfont mediumf" href="contact.html">Contact</a></li>
 </ul>
-<div class="thinfont bigf">
+<div class="thinfont biggerf">
 	<br>It's empty.... &#128563;
 </div>
 <div style="position: relative; top: 20px; display: inline-block" class="lightfont mediumf"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
