--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,7 @@
 	<li><a class="lightfont mediumf" href="aphug.html">AP HUG</a></li>
 	<li><a class="lightfont mediumf currentpage">Contact</a></li>
 </ul>
-<div class="thinfont bigf">
+<div class="thinfont biggerf">
 	<br>It's empty.... &#128563;
 </div>
 </body>
