--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -22,6 +22,6 @@
 <div class="thinfont biggerf">
 	<br>It's empty.... &#128563;
 </div>
-<div style="position: relative; top: 20px; display: inline-block" class="lightfont mediumf"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
+<div class="lightfont mediumf"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
 </body>
 </html>
