--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,9 +15,10 @@
 </head>
 <body>
 <ul>
-	<li><a class="lightfont mediumf" href="../index.html">Home</a></li>
-	<li><a class="lightfont mediumf" href="aphug.html">AP HUG</a></li>
-	<li><a class="lightfont mediumf currentpage">Contact</a></li>
+	<li><a class="lightfont mediumf" href="../index.html">home</a></li>
+	<li><a class="lightfont mediumf" href="work.html">work</a></li>
+	<li><a class="lightfont mediumf" href="aphug.html">ap hug</a></li>
+	<li><a class="lightfont mediumf currentpage">contact</a></li>
 </ul>
 <div class="thinfont biggerf">
 	<br>It's empty.... &#128563;
