--- a/pages/work.html
+++ b/pages/work.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>scary place</title>
 	<meta name="title" content="William Widjaja - widjaja">
-	<meta name="description" content="AP Human Geography is a desolate land where no human should ever step in.">
+	<meta name="description" content="Numerous works that widjaja has done.">
   	<meta name="keywords" content="widjaja,wida_ja,widaja,boren, ap hug, ap human geography, william, widjaja0, programmer">
   	<meta name="author" content="William Widjaja">
 	<link rel="stylesheet" href="../stylesheet.css">
@@ -16,13 +16,20 @@
 <body>
 <ul>
 	<li><a class="lightfont mediumf" href="../index.html">home</a></li>
-	<li><a class="lightfont mediumf" href="work.html">work</a></li>
-	<li><a class="lightfont mediumf currentpage">ap hug</a></li>
+	<li><a class="lightfont mediumf currentpage">work</a></li>
+	<li><a class="lightfont mediumf" href="aphug.html">ap hug</a></li>
 	<li><a class="lightfont mediumf" href="contact.html">contact</a></li>
 </ul>
-<div class="thinfont biggerf">
-	<br>It's empty.... &#128563;
+<body>
+<div class="lightfont biggerf">
+	showdown
 </div>
-<div class="lightfont mediumf"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
+<div>
+	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dy1D3ShhXh4?controls=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+</ul>
+<div class="normalfont mediumf">
+	animation: min sung | editing: widjaja		
+</div>
 </body>
 </html>
