--- a/index.html
+++ b/index.html
@@ -15,19 +15,13 @@
 </head>
 <body>
 <ul>
-	<li><a class="lightfont mediumf currentpage">Home</a></li>
-	<li><a class="lightfont mediumf" href="./pages/aphug.html">AP HUG</a></li>
-	<li><a class="lightfont mediumf" href="./pages/contact.html">Contact</a></li>
+	<li><a class="lightfont mediumf currentpage">home</a></li>
+	<li><a class="lightfont mediumf" href="./pages/work.html">work</a></li>
+	<li><a class="lightfont mediumf" href="./pages/aphug.html">ap hug</a></li>
+	<li><a class="lightfont mediumf" href="./pages/contact.html">contact</a></li>
 </ul>
-<div class="lightfont biggerf">
-	showdown
-</div>
-<div>
-	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dy1D3ShhXh4?controls=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-</ul>
-<div class="normalfont mediumf">
-animation: min sung | editing: widjaja		
+<div class="thinfont biggerf">
+	<br>It's empty.... &#128563;
 </div>
 </body>
 </html>
