--- a/pages/aphug.html
+++ b/pages/aphug.html
@@ -20,9 +20,11 @@
 	<li><a class="lightfont mediumf currentpage">ap hug</a></li>
 	<li><a class="lightfont mediumf" href="contact.html">contact</a></li>
 </ul>
-<div class="thinfont biggerf">
-	<br>It's empty.... &#128563;
+<div class="lightfont mediumf">
+	<a style="text-decoration: none;" href="https://discord.gg/vCf3BxX">Click here to join our Study Group Discord Server!</a>
 </div>
-<div class="lightfont mediumf"><a style="text-decoration: none;" href="https://drive.google.com/open?id=1Ozyobnu5xwo1PZz6cgl-P61h8bYc_w2f">Link To Unit 6 & 7.</a></div>
+<div>
+	<iframe src="https://discordapp.com/widget?id=696831771240693762&theme=dark" width="350" height="500" allowtransparency="false" frameborder="0"></iframe>
+</div>
 </body>
 </html>
