--- a/pages/work.html
+++ b/pages/work.html
@@ -24,8 +24,10 @@
 <div class="lightfont biggerf">
 	showdown
 </div>
-<div>
-	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dy1D3ShhXh4?controls=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div style="width: 80%; max-width: 640px; margin: auto;">
+	<div class="video-container">
+		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dy1D3ShhXh4?controls=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	</div>
 </div>
 </ul>
 <div class="normalfont mediumf">
