--- a/pages/work.html
+++ b/pages/work.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>scary place</title>
+	<title>workworkwork</title>
 	<meta name="title" content="William Widjaja - widjaja">
 	<meta name="description" content="Numerous works that widjaja has done.">
   	<meta name="keywords" content="widjaja,wida_ja,widaja,boren, ap hug, ap human geography, william, widjaja0, programmer">
@@ -17,7 +17,6 @@
 <ul>
 	<li><a class="lightfont mediumf" href="../index.html">home</a></li>
 	<li><a class="lightfont mediumf currentpage">work</a></li>
-	<li><a class="lightfont mediumf" href="aphug.html">ap hug</a></li>
 	<li><a class="lightfont mediumf" href="contact.html">contact</a></li>
 </ul>
 <body>
