--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
 <div class="thinfont biggerf">
 	<br>It's empty.... &#128563;
 </div>
+<div class="normalfont mediumf">
+	<br>ngl tho online school right now and final exams be like &#x1F921;
+</div>
 </body>
 </html>
