--- a/pages/work.html
+++ b/pages/work.html
@@ -20,17 +20,8 @@
 	<li><a class="lightfont mediumf" href="contact.html">contact</a></li>
 </ul>
 <body>
-<div class="lightfont biggerf">
-	showdown
-</div>
-<div style="width: 80%; max-width: 640px; margin: auto;">
-	<div class="video-container">
-		<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dy1D3ShhXh4?controls=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</div>
-</div>
-</ul>
-<div class="normalfont mediumf">
-	animation: min sung | editing: widjaja		
+<div class="thinfont biggerf">
+	<br>It's empty.... &#128563;
 </div>
 </body>
 </html>
