--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>widjaja</title>
-	<meta name="title" content="William Widjaja - widjaja">
-	<meta name="description" content="Hello! My name is William Widjaja, but you may know me as widjaja, and I am a developer and a CTF player who loves to make things.">
-  	<meta name="keywords" content="widjaja,wida_ja,widaja,boren, ap hug, ap human geography, william, widjaja0, programmer">
-  	<meta name="author" content="William Widjaja">
+	<title>Widjaja™</title>
 	<link rel="stylesheet" href="stylesheet.css">
 	<style>
+		
 	</style>
 	<link rel="icon" href="icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
