--- a/pages/kylie.html
+++ b/pages/kylie.html
@@ -2,13 +2,10 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>contact me</title>
-	<meta name="title" content="William Widjaja - widjaja">
-	<meta name="description" content="The contact page for William Widjaja, also known as widjaja.">
-  	<meta name="keywords" content="widjaja,wida_ja,widaja,boren, ap hug, ap human geography, william, widjaja0, programmer">
-  	<meta name="author" content="William Widjaja">
+	<title>To: Kylie</title>
 	<link rel="stylesheet" href="../stylesheet.css">
 	<style>
+		
 	</style>
 	<link rel="icon" href="../icon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
