--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<style>
 
 	</style>
-	<link rel="icon" href="icon.png">
+	<link rel="icon" href="https://em-content.zobj.net/source/apple/354/christmas-tree_1f384.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
