--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
 	<title>Widjaja™</title>
 	<link rel="stylesheet" href="stylesheet.css">
 	<style>
-
+		div {
+			text-align: center;
+			padding-top: 20%;
+			font-family: monospace;
+			font-size: xx-large;
+		}
 	</style>
 	<link rel="icon" href="https://em-content.zobj.net/source/apple/354/christmas-tree_1f384.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div class="thinfont biggerf">
-	<br>It's empty.... &#128563;
+	<br>You're not supposed to be here. &#128563;
 </div>
 </body>
 </html>
