add a family friendly version...

--- a/kyliel.html
+++ b/kyliel.html
@@ -126,7 +126,7 @@
 								<h3>Kylie-core!</h3>
 								<p class="motto">Click here for a short playlist that reminds me of you...</p>
 							</div>
-							<div class="services">The first two songs remind me of you as a person, and the next two remind me of what it feels like when we're together. The last song is a song that has stuck with me and reminds me of the fun moments we've had together :P</div>
+							<div class="services">The first two songs remind me of you as a person, and the next two remind me of what it feels like when we're vibing. The last song is a song that has stuck with me and reminds me of the fun moments we've had together :P</div>
 						</div>
 						<div class="project white" style="background-color: #3d77ea">
 							<img class="product center" src="./kylieimgs/kylie1.jpg"/>
@@ -144,7 +144,7 @@
 								<h3>Basil & Co.</h3>
 								<p class="motto">10/28/2023</p>
 							</div>
-							<div class="services">You side-eyed me in this photo ASHJASHJAHSJH I NEED MORE PHOTOS OF YOU, YOU ACTUALLY LOOK PHOTOGENIC WTH</div>
+							<div class="services">You side-eyed me in this photo ASHJASHJAHSJH</div>
 						</div>
 						<div class="project white" style="background-color: #001828">
 							<img class="product center" src="./kylieimgs/kylie3.png"/>
@@ -153,16 +153,16 @@
 								<h3 >Boiling Crab & Pool!</h3>
 								<p class="motto">11/25/2023</p>
 							</div>
-							<div class="services">Happy day! I was getting kind of nervous at the end there when it just came down to us two, but I think that day was really nice and it was fun being with you even though I could tell you didn't really know what to say either LOL :)</div>
+							<div class="services">Happy day!</div>
 						</div>
 						<div class="project white" style="background-color: #b1cbab">
 							<img class="product" src="./kylieimgs/kylie4.jpg" style="max-width: 40%; max-height: auto;"/>
 								
 							<div class="text">
-								<h3>We made it official! :D</h3>
+								<h3>Aroma brunch! :D</h3>
 								<p class="motto">12/11/2023</p>
 							</div>
-							<div class="services">I think the person in this photo is the most beautiful person in the world and has the most uplifting and warm personality you could find in the entire universe.</div>
+							<div class="services">You have an amazing personality and I hope other people would agree with me :D</div>
 						</div>
 						<div class="project white" style="background-color: #2d2d2d">
 							<img class="product right" src="./kylieimgs/kylie5.jpg"/>
@@ -171,16 +171,7 @@
 								<h3>Hey... how did this get here?</h3>
 								<p class="motto">12/21/2023</p>
 							</div>
-							<div class="services">I think out of the two huggable things in this image, the one on the left who's name starts with a K is definitely the better one LMAO</div>
-						</div>
-						<div class="project white" style="background-color: #25cbf2">
-							<img class="product center" src="./kylieimgs/kylie6.jpg"/>
-								
-							<div class="text">
-								<h3>Wow this couple looks so good together !</h3>
-								<p class="motto">12/19/2023</p>
-							</div>
-							<div class="services">I'm grateful to have you as a girlfriend and I hope that we can continue to grow our relationship making a bunch of fun moments together. (◕‿◕)</div>
+							<div class="services">Ice bear guling!?</div>
 						</div>
 					</div>
 				</section>
@@ -190,7 +181,7 @@
 					<div class="content">
 						<div class="text">
 							<h2>Dear: Kylie Lau</h2>
-							<p>Hey Kylie!!! Thanks for all the fun moments this year and all the time you've spent with me these past few weeks. You're my favorite person that I have met all year and I just want you to know that you meant a lot to me this year and you will continue to mean a lot to me from now on. Have a wonderful 19th birthday and a Merry Christmas :) I could go on and on about all the things that I like about you but then I might run out of things to compliment about you for next Christmassss or your next birthdayyyyy or anytime I truly feel like, "wow I am madly in love with this person" &#128553; So I'm going to save them for some other time ヽ(´▽`)/</p>
+							<p>Hey Kylie!!! Thanks for all the fun moments this year and all the time you've spent with me these past few weeks. You're one of the most wonderful people that I have met all year and I just want you to know that you've done a lot for me and I am thankful for all of it! I hope you have a wonderful 19th birthday and a Merry Christmas ヽ(´▽`)/</p>
 							<p> - Widjaja
 						</div>
 						<div>
