--- a/kyliel.html
+++ b/kyliel.html
@@ -32,6 +32,9 @@
 		.services {
 			text-shadow:  black 1px 1px 2px;
 		}
+		.text {
+			z-index: 10;
+		}
 	</style>
 	<style>
 		/* customizable snowflake styling */
@@ -156,7 +159,7 @@
 							<div class="services">Happy day!</div>
 						</div>
 						<div class="project white" style="background-color: #b1cbab">
-							<img class="product" src="./kylieimgs/kylie4.jpg" style="max-width: 40%; max-height: auto;"/>
+							<img class="product" src="./kylieimgs/kylie4.jpg" style="max-width: 45%; max-height: auto;"/>
 								
 							<div class="text">
 								<h3>Aroma brunch! :D</h3>
