update kylie + bryce note

--- a/bryce.html
+++ b/bryce.html
@@ -192,7 +192,7 @@
 					<div class="content">
 						<div class="text">
 							<h2>Dear: Bryce Villao</h2>
-							<p>Hey Bryce!</p>
+							<p>Hey Bryce! I'm so glad that we're roommates this year and I'm really thankful for all that you've done for and given to me this year. Including the things you've done for my family :) Looking forward to another two semesters with my one and only pinoy roomie &#128523;</p>
 							<p> - Widjaja
 						</div>
 						<div>
