--- a/kylie.html
+++ b/kylie.html
@@ -150,7 +150,7 @@
 							<div class="services">You side-eyed me in this photo ASHJASHJAHSJH I NEED MORE PHOTOS OF YOU, YOU ACTUALLY LOOK PHOTOGENIC WTH</div>
 						</div>
 						<div class="project white" style="background-color: #001828">
-							<img class="product center" src="./kylieimgs/kylie3.png"/>
+							<img class="product center" src="./kylieimgs/kylie3.jpg"/>
 								
 							<div class="text">
 								<h3 >Boiling Crab & Pool!</h3>
