--- a/kyliel.html
+++ b/kyliel.html
@@ -159,7 +159,7 @@
 							<div class="services">Happy day!</div>
 						</div>
 						<div class="project white" style="background-color: #b1cbab">
-							<img class="product" src="./kylieimgs/kylie4.jpg" style="max-width: 40%; max-height: auto;"/>
+							<img class="product center" src="./kylieimgs/kylie4.jpg"/>
 								
 							<div class="text">
 								<h3>Aroma brunch! :D</h3>
